# opaque

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.yaml  deny.toml  docker-compose.yaml
.github/workflows/: docker-push.yaml
content/: about.md  posts
content/posts/: 2022-09-23-an-inescapable-hell-of-networking.md  2023-10-02-determinstic-key-generation.md  2024-06-12-the-key-to-commitment.md  2024-06-18-describing-technical-topics.md  2024-09-24-running-a-pubnix-in-docker-for-fun-and-profit.md
opaque/: Cargo.toml
opaque-ansi/: Cargo.toml
opaque-ansi/src/: lib.rs
opaque-ansi/src/test_data/: input  output
opaque-markdown/: Cargo.toml
opaque-markdown/src/: lib.rs  syntect_adapter.rs
opaque/src/: cli.rs  main.rs  post_scanner.rs  state.rs
opaque/src/pages/: assets.rs  mod.rs  post.rs
opaque/src/pages/components/: mod.rs  posts.rs
opaque/src/postprocessing/: convert_ansi.rs  mod.rs  rewrite_links.rs
opaque_ansi/: Cargo.toml
opaque_ansi/src/: lib.rs
opaque_markdown/: Cargo.toml
opaque_markdown/src/: lib.rs  syntect_adapter.rs
output_snippets/: testing.txt
output_snippets/iterator-matching-into-variable-sized-slices-in-rust/: next-chunk-error.txt  output-echo-multiple-chained-fail.txt  output-echo-multiple-chained.txt  output.txt
src/: ansi_to_html.rs  main.rs  posts.rs  rewrite_links.rs  state.rs
src/pages/: assets.rs  mod.rs
static/assets/: images  main.css  syntect.css
