[package]
name = "opaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Page generation
maud = {version="0.24.0", features=["axum"]}

# Website hosting
axum = {version="0.5.17", features=["headers"]}
tokio = {version="1.21.2", features=["full"]}

# Static file hosting - dev only? for now?
include_dir = "0.7.3"
mime_guess = "2.0.4"

# Tracing
tower-http = {version = "0.3.4", features = ["trace"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "ansi", "json"]}
