[package]
name = "opaque-markdown"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "tracing"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
comrak = { version = "0.14.0", features = ["syntect"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
syntect = "5.0.0"
tokio = { version = "1.21.2", optional = true, features = ["fs"] }
tracing = {version="0.1.35", optional=true}
