[package]
name = "opaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = ["bundled_static"]
prod = []
bundled_static = ["dep:include_dir", "dep:mime_guess"]

[dependencies]

# Page generation
maud = {version="0.24.0", features=["axum"]}

# Website hosting
axum = {version="0.5.17", features=["headers"]}
tokio = { version = "1.21.2", features = ["full", "fs", "tracing"] }

# Static file hosting - dev only? for now?
include_dir = {version="0.7.3", optional=true}
mime_guess = {version="2.0.4", optional=true}

# Tracing
tower-http = { version = "0.3.4", features = ["trace", "catch-panic"] }
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "ansi", "json"]}

# Workspace
opaque_markdown = { version = "0.1.0", path = "../opaque_markdown" }

# Post processing
lol_html = "0.3.1"

# Error handling
thiserror = "1.0.37"
