[package]
name = "opaque"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = ["bundled_static"]
prod = []
bundled_static = ["dep:include_dir", "dep:mime_guess"]
cache = []

[dependencies]

# Page generation
maud = { version = "0.24.0", features = ["axum"] }

# Website hosting
axum = { version = "0.5.17", features = ["headers", "macros"] }
tokio = { version = "1.21.2", features = ["full", "fs", "tracing"] }

# Static file hosting - dev only? for now?
include_dir = {version="0.7.3", optional=true}
mime_guess = { version = "2.0.4", optional = true }

# Tracing
tower-http = { version = "0.3.4", features = ["trace", "catch-panic"] }
tracing = "0.1.35"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"], default-features = false }
lol_html = "0.3.1"
color-eyre = "0.6.2"
thiserror = "1.0.37"

# Configuration
clap = { version = "4.0.22", features = ["derive", "error-context", "help", "suggestions", "std", "usage"], default-features = false }
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_yaml = "0.9.25"

# Utilities
chrono = { version = "0.4.22", features = ["serde", "std"], default-features = false }
parking_lot = "0.12.1"
uluru = "3.0.0"
walkdir = "2.3.2"

# Workspace
opaque-markdown = { version = "0.2.0", path = "../opaque-markdown" }
opaque-ansi = { version = "0.1.0", path = "../opaque-ansi" }
