[package]
name = "opaque_ansi"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]

[dependencies]
ansi-parser = { version = "0.9.1", path = "../vendor/ansi-parser" }
html-escape = "0.2.12"
tracing = { version = "0.1.37", optional = true }
