[package]
name = "opaque_markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "tracing"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
comrak = { version = "0.14.0", features = ["syntect"] }
lazy_static = "1.4.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", optional = true }
tracing = {version="0.1.35", optional=true}
